[workspace]
members = [
    "tforge", 
    "tforge-bencode", 
    "tforge-metainfo", 
    "tforge-peer", 
    "tforge-tracker", 
    "tforge-client",
    "tforge-server",
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.79" }
tokio = { version = "1.35.1" }
serde = { version = "1.0.198" }
lazy_static = { version = "1.4.0" }