[package]
name = "tforge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tforge-config = { path = "../tforge-config" }
tforge-metainfo = { path = "../tforge-metainfo" }
tforge-peer = { path = "../tforge-peer" }
tforge-tracker = { path = "../tforge-tracker" }
tforge-bencode = { path = "../tforge-bencode" }